# csirt-slm-memorization

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  fetch_anonshield.sh  pyproject.toml  reproduce.sh  reproduce_full.sh
cais_mock/: generator.py
experiment/canaries/: class_a.json  class_b.json  variants_pool_a.json  variants_pool_b.json
experiment/configs/: anon_gemma3-1b_v0_seed1337.yaml  anon_gemma3-1b_v0_seed2024.yaml  anon_gemma3-1b_v0_seed42.yaml  anon_gemma3-1b_v1_seed1337.yaml  anon_gemma3-1b_v1_seed2024.yaml  anon_gemma3-1b_v1_seed42.yaml  anon_gemma3-1b_v2_seed1337.yaml  anon_gemma3-1b_v2_seed2024.yaml  anon_gemma3-1b_v2_seed42.yaml  anon_gemma3-1b_v3_seed1337.yaml  anon_gemma3-1b_v3_seed2024.yaml  anon_gemma3-1b_v3_seed42.yaml  anon_llama32-3b_v0_seed1337.yaml  anon_llama32-3b_v0_seed2024.yaml  anon_llama32-3b_v0_seed42.yaml  anon_llama32-3b_v1_seed1337.yaml  anon_llama32-3b_v1_seed2024.yaml  anon_llama32-3b_v1_seed42.yaml  anon_llama32-3b_v2_seed1337.yaml  anon_llama32-3b_v2_seed2024.yaml  anon_llama32-3b_v2_seed42.yaml  anon_llama32-3b_v3_seed1337.yaml  anon_llama32-3b_v3_seed2024.yaml  anon_llama32-3b_v3_seed42.yaml  anon_qwen3-1.7b_v0_seed1337.yaml  anon_qwen3-1.7b_v0_seed2024.yaml  anon_qwen3-1.7b_v0_seed42.yaml  anon_qwen3-1.7b_v1_seed1337.yaml  anon_qwen3-1.7b_v1_seed2024.yaml  anon_qwen3-1.7b_v1_seed42.yaml  anon_qwen3-1.7b_v2_seed1337.yaml  anon_qwen3-1.7b_v2_seed2024.yaml  anon_qwen3-1.7b_v2_seed42.yaml  anon_qwen3-1.7b_v3_seed1337.yaml  anon_qwen3-1.7b_v3_seed2024.yaml  anon_qwen3-1.7b_v3_seed42.yaml  (+121 more)
scripts/: verify_claims.py
(+457 files in other folders)
